Section-4/4.9/08_ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: participate
  namespace: luckydraw
spec:
  selector:
    app: participate
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: participate
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: submissions
  namespace: luckydraw
spec:
  selector:
    app: submissions
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: submissions
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: luckydraw-ingress
  namespace: luckydraw
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /participate
        pathType: Prefix
        backend:
          service:
            name: participate
            port:
              number: 80
      - path: /submissions
        pathType: Prefix
        backend:
          service:
            name: submissions
            port:
              number: 80
